--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
       <%= f.label :password %>
       <%= f.password_field :password, class: "form-control" %>
 
-      <%= f.label :password_confirmation, t(".confirm") %> %>
+      <%= f.label :password_confirmation, t(".confirm") %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
 
       <%= f.submit t(".createacc"), class: "btn btn-primary" %>
