--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
 <li>
-  <%= gravatar_for user, size: Settings.app.users._user.size_gravatar %>
+  <%= gravatar_for user, size: Settings.app.users._user.sizeofgravatar %>
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to t("users._user.delete"), user, method: :delete, data: {
+    | <%= link_to "delete", user, method: :delete, data: {
       confirm: t("users._user.confirm")} %>
   <% end %>
 </li>
