--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
 <% provide :title, t(".title") %>
-<h1><%= t(".samapp")%></h1>
-<p>
-  <%= raw t(".content") %>
-</p>
+<div class="center jumbotron">
+  <h1><%= t(".samapp") %></h1>
+
+  <h2><%= raw t(".content")%></h2>
+
+  <%= link_to t(".signup"), signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt: t(".raillogo")), "http://rubyonrails.org/" %>
