--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide :title, t(".title") %>
+<h1><%= t(".samapp")%></h1>
+<p>
+  <%= raw t(".content") %>
+</p>
